@@ -15,7 +15,7 @@
     <name>tools</name>
     <description>tools</description>
     <properties>
-        <revision>2.1.0.9</revision>
+        <revision>2.1.1.0</revision>
         <java.version>21</java.version>
         <kotlin.version>2.4.0</kotlin.version>
         <mybatis-plus.version>3.5.16</mybatis-plus.version>
@@ -231,7 +231,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.15.0</version>
                 <configuration>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <proc>full</proc>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                 </configuration>
